--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
         </div>
     </div>
 	<div class="container main-frame" ng-app="TVPremieresApp" ng-controller="mainController" ng-init="init()">
-		<div class="search-box row-fluid form-inline"></div>
+		<div class="search-box row-fluid form-inline">
+			<label>Filter: </label>
+			<input type="text" ng-model="filterText"/>
+			<label>Genre: </label>
+			<select ng-model="genreFilter" ng-options="label for label in availableGenres">
+		    <option value="">All</option>
+			</select>
+		</div>
         <div class="results-top"></div>
         <div class="results-container">
             <ul class="episode-list">
-				<li ng-repeat="tvshow in results">
+				<li ng-repeat="tvshow in results | filter: filterText | filter: genreFilter">
 				    <div class="row-fluid">
 				        <div class="span3">
 				            <img src="{{tvshow.episode.images.screen}}" />
@@ -31,6 +38,9 @@
 				        </div>
 				        <div class="span6">
 				            <h3>{{tvshow.show.title}}: {{tvshow.episode.title}}</h3>
+				            <h4>Show Overview</h4>
+				            <p>{{tvshow.show.overview}}</p>
+				            	<h4>Episode Overview</h4>
 				            <p>{{tvshow.episode.overview}}</p>
 				        </div>
 				        <div class="span3">
